--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,14 +2,9 @@ server {
     listen       80;
     listen  [::]:80;
     server_name  localhost;
-
+    rewrite ^(.*) https://$host$1 permanent;
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
-
-    location / {
-        root   /usr/share/nginx/html/xiunobbs;
-        index  index.html index.htm index.php;
-    }
 
     #error_page  404              /404.html;
 
@@ -17,7 +12,7 @@ server {
     #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html/xiunobbs;
+        root   /usr/share/nginx/html;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
@@ -35,17 +30,6 @@ server {
     #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
     #    include        fastcgi_params;
     #}
-   
-     location ~ \.php($|/){
-        fastcgi_pass   php:9000;
-        fastcgi_param  SCRIPT_FILENAME   /var/www/html/xiunobbs$fastcgi_script_name;
-        fastcgi_split_path_info  ^((?U).+\.php)(/?.+)$;
-        fastcgi_param  PATH_INFO  $fastcgi_path_info;
-        fastcgi_param  PATH_TRANSLATED  /var/www/html/xiunobbs$fastcgi_path_info;
-        proxy_cookie_path  /speedacc /;  
-        include        fastcgi_params;
-    }
-
 
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
